fixed tracks alignment

--- a/src/assets/css/Tracks.css
+++ b/src/assets/css/Tracks.css
@@ -27,12 +27,12 @@
 
 .Tracks > div {
     display: inline-block;
-    margin: 0 2rem 0 0;
+    vertical-align: top;
+    margin: 0 20px 20px 20px;
     width: 250px;
     border: 1px solid white;
     padding: 2rem 1.5rem .5rem 1.5rem;
     border-radius: 2px;    
-    margin-bottom: 20px;
 }
 
 .Tracks > div > span {
@@ -53,17 +53,17 @@
 
 .Subcategories {
     justify-content: center;
-    margin:auto;
+    margin: 0 auto;
     flex-wrap: wrap;
 }
 
 .Subcategories > div {
     display: inline-block;
-    margin: 0 2rem 1rem 0;
+    vertical-align: top;
+    margin: 0 20px 20px 20px;
     width: 180px;
     border: 1px solid white;
     padding: 2rem 1.5rem .5rem 1.5rem;
-    margin-bottom: 20px;
     border-radius: 2px;
 }
 
